@@ -1,7 +1,7 @@
 // $Id$
 
 /**
- * @file MultiTopic_Base_Base.idl
+ * @file MultiTopic_Base.idl
  * @author
  */
 
